commit1 before deploy to netlify

--- a/style.css
+++ b/style.css
@@ -127,12 +127,12 @@ ul {
 }
 
 .regbut {
-  background-color:orange;
+  background-color:black;
   width: 110px;
   border: 1px solid rgba(9, 0, 0, 0.557);
   border-radius: 15px;
   padding: 10px;
-  color: #000000;
+  color: white;
   transition: width 0.1s;
   display: inline-block;
   margin-bottom: 20px;
@@ -146,7 +146,7 @@ ul {
 
 .regbut:hover {
   color: rgb(255, 255, 255);
-  background-color: black;
+  background-color: crimson;
   width: 111px;
 }
 
