--- a/@media.css
+++ b/@media.css
@@ -154,6 +154,9 @@
     font-size: 1.5rem !important;
   }
 
+
+
+ 
   .logo {
     width: 59px !important;
     height: 59px !important;
@@ -284,4 +287,28 @@
   input[placeholder] {
     font-size: 25px;
   }
+}
+
+
+
+/* .logosection img {
+  position: absolute;
+  left: 11rem;
+  top: 5px;
+  ;
+} */
+
+@media (max-width: 1000px) {
+
+  .logosection img {
+    position: absolute;
+    left: 8.5rem !important;
+  
+    ;
+  }
+  
+  
+
+
+ 
 }
