--- a/slider.css
+++ b/slider.css
@@ -1,5 +1,5 @@
 .gallery {
-  --s: 280px;
+  --s: 350px;
   /* control the size */
 
   display: grid;
@@ -37,31 +37,35 @@
 .gallery::after,
 .gallery > img {
   /* animation: m 8s infinite cubic-bezier(0.5, -0.2, 0.5, 1.2); */
-  animation: m 8s infinite cubic-bezier(0.5, -0.2, 0.5,1.2);
+  animation: m 8.5s infinite cubic-bezier(0.5, -0.2, 0.5, 1.2);
+}
+
+.gallery > img:nth-child(1) {
+  animation-delay: -1.1s;
 }
 
 .gallery > img:nth-child(2) {
-  animation-delay: -2s;
+  animation-delay: -2.2s;
 }
 
 .gallery > img:nth-child(3) {
-  animation-delay: -4s;
+  animation-delay: -3.2s;
 }
 
 .gallery > img:nth-child(4) {
-  animation-delay: -6s;
+  animation-delay: -4.2s;
 }
 .gallery > img:nth-child(5) {
-  animation-delay: -8s;
+  animation-delay: -5.2s;
 }
 .gallery > img:nth-child(6) {
-  animation-delay: -10s;
+  animation-delay: -6.2s;
 }
 .gallery > img:nth-child(7) {
-  animation-delay: -12s;
+  animation-delay: -7.7s;
 }
 
-@keyframes m{
+@keyframes m {
   0%,
   3% {
     transform: rotate(0);
