--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ a {
   text-decoration: none;
   color: inherit;
 }
+.acktabytes,
+.logosection {
+  user-select: none;
+}
 
 body {
   background: url("image/logo.webp") no-repeat;
@@ -94,7 +98,6 @@ ul {
 }
 
 .logoname {
-
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
@@ -106,7 +109,6 @@ ul {
   position: absolute;
   left: 11rem;
   top: 5px;
-  ;
 }
 
 .logo {
@@ -126,7 +128,7 @@ ul {
 }
 
 .regbut {
-  background-color:black;
+  background-color: black;
   width: 110px;
   border: 1px solid rgba(9, 0, 0, 0.557);
   border-radius: 15px;
@@ -135,7 +137,6 @@ ul {
   transition: width 0.1s;
   display: inline-block;
   margin-bottom: 20px;
-
 }
 
 .regbut:visited,
@@ -268,11 +269,9 @@ li a:hover {
 }
 
 .about-container {
-
-  
   text-align: center;
   background: #f9f9f990;
- padding: 10px;
+  padding: 10px;
   border-radius: 10px;
   box-shadow: 4px 4px 18px #2a080165, 4px 4px 8px #ff7b006d,
     4px 4px 13px #00ff3c4f;
@@ -512,15 +511,31 @@ input[type="password"]:hover {
 }
 
 .return {
-  background-color: rgba(204, 156, 93, 0.685);
-  height: 50px;
+  background-color: rgba(100, 87, 71, 0.71);
+  height: 35px;
   display: flex;
   align-items: center;
 }
 .ret {
-  font-size: 51px;
+  font-size: 48px;
   color: rgba(0, 0, 0, 0.584);
   font-weight: bold;
   margin-left: 10px;
-  
+}
+.inup {
+  text-align: center;
+}
+.reg {
+  background-color: rgba(0, 0, 0, 0.804);
+  text-align: right;
+  padding-right: 20px;
+}
+.linkinup {
+  color: tan;
+}
+.linkinup:visited {
+  color: rgb(145, 145, 5);
+}
+.linkinup:hover {
+  color: red;
 }
