--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ a {
 }
 
 body {
-  background: url("image/logo.webp") no-repeat;
+  background: url("../image/logo.webp") no-repeat;
   background-size: cover;
   background-position: center;
   color: white;
@@ -33,31 +33,28 @@ ul {
 }
 
 .body1 {
-  background-color: rgba(12, 11, 11, 0.792);
-  height: 30vh;
+  background-color:rgba(0, 0, 0, 0.945);
+ 
+  height: 35vh;
 }
 
-.welcomemessage{
+.welcomemessage {
 
-margin-top: 10px;
-padding: 2px;
+  margin-top: 10px;
+  padding: 2px;
 
 }
 
 
 .body2 {
-  background-color: #020100aa;
+  background-color:rgba(0, 0, 0, 0.847);
+ 
   height: 400px;
-  margin-top: 1px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
-}
-
-.body2:hover {
-  background-color: #181614ec;
 }
 
 .body3 {
@@ -138,7 +135,7 @@ padding: 2px;
 
 .regbut {
   background-color: rgba(0, 100, 0, 0.826);
-  width: 200px;
+  width: 201px;
   color: white;
   transition: width 0.1s;
   padding: 14px;
@@ -147,7 +144,7 @@ padding: 2px;
   display: flex;
   align-items: center;
   justify-content: center;
-margin-top: 2em;
+  margin-top: 2em;
 
 }
 
