--- a/css/@media.css
+++ b/css/@media.css
@@ -1,6 +1,12 @@
 @media (max-width: 499px) {
+  body {
+    background: url("/image/logom.png") no-repeat !important;
+    background-size: cover !important;
+    background-position: center !important;
+  }
   .navbarulist ul {
     width: 5rem;
+    margin-right: 5px;
   }
 
   .acktabytes {
@@ -19,16 +25,16 @@
     margin: 0;
   }
 
-  .loginbut {
-    margin: 3px;
-  }
-
   .serbut {
     margin-right: 5px;
   }
 
   .body1 {
     height: 40vh;
+    background-color: #352b20c5 !important;
+  }
+  .body3 {
+    background-color: #352b20c5 !important;
   }
 
   .services-list li {
@@ -46,6 +52,7 @@
     display: flex;
     flex-direction: column !important;
     justify-content: space-around;
+    background-color: #352b20 !important;
   }
 
   label {
@@ -145,6 +152,7 @@
 @media (min-width: 500px) and (max-width: 1000px) {
   .navbarulist ul {
     width: 5rem;
+    margin-right: 10px;
   }
 
   .acktabytes {
@@ -164,17 +172,13 @@
   }
 
   .loginbut {
-    margin: 3px;
-    padding: 15px;
+    margin: 8px;
+    padding: 8px !important;
     font-size: 19px;
   }
 
-  .serbut {
-    margin-right: 5px;
-  }
-
   .serdrop {
-    padding: 15px;
+    padding: 8px !important;
     font-size: 19px;
   }
 
