welcome font and mini-logo text color

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,15 @@
   padding: 0;
 }
 
+@font-face {
+  font-family: star;
+  src: url("../fonts/BloodOmen.ttf");
+}
+
+#femi, #hi {
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px rgb(0, 0, 0);
+}
 .dkmode {
   background-color: rgba(0, 0, 0, 0.836) !important;
   border: none !important;
@@ -58,8 +67,8 @@ ul {
 .welcomemessage {
   margin-top: 30px;
   border: 3px solid #4c3b2dec;
-  padding: 5px;
-  height: 30vh;
+  padding: 4px;
+  height: 32vh;
   background-color: #4c3b2dec;
 }
 
@@ -108,11 +117,10 @@ ul {
 .welcome {
   background: linear-gradient(#8fd71d, #fcfcfc);
   background-clip: text;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family:star;
   text-align: center;
   /* color: transparent; */
-  font-size: 22px;
+  font-size: 35px;
 }
 
 .nav {
